--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,8 @@ build/
 .idea/
 *.iml/
 UserAuthService/.mvn/
-UserAuthService/.mvn/wrapper/
-UserAuthService/target/
 
+UserAuthService/target/
+ServiceRegistry/.mvn/
+
+ServiceRegistry/target/
