--- a/VehicleService/src/main/resources/application.properties
+++ b/VehicleService/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+spring.application.name=vehicle-service
+spring.datasource.url=jdbc:mysql://localhost:3306/NextTravel?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.main.allow-circular-references=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+server.port=8082
