--- a/.gitignore
+++ b/.gitignore
@@ -46,5 +46,8 @@ ServiceRegistry/.mvn/
 ServiceRegistry/target/
 VehicleService/.mvn/
 VehicleService/target/
+PackageService/.mvn/
+PackageService/target/
+
 
 
