Added Guide Service module.

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,8 @@ VehicleService/.mvn/
 VehicleService/target/
 PackageService/.mvn/
 PackageService/target/
+GuideService/.mvn/
+GuideService/target/
 
 
 
