Added PaymentService module.

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,9 @@ PackageService/.mvn/
 PackageService/target/
 GuideService/.mvn/
 GuideService/target/
+PaymentService/.mvn/
+PaymentService/target/
+
 
 
 
