--- a/GuideService/src/main/resources/application.properties
+++ b/GuideService/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=guide-service
 server.port=8084
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=nextTravel
+spring.data.mongodb.database=NextTravel-GuidesDB
