--- a/UserAuthService/src/main/resources/application.properties
+++ b/UserAuthService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 spring.application.name=auth-service
-spring.datasource.url=jdbc:mysql://localhost:3306/NextTravel?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/NextTravel-UsersDB?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.generate-ddl=true
