--- a/VehicleService/src/main/resources/application.properties
+++ b/VehicleService/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=vehicle-service
-spring.datasource.url=jdbc:mysql://localhost:3306/NextTravel?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/NextTravel-VehiclesDB?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.generate-ddl=true
