Added AdminService microservice.

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,9 @@ GuideService/.mvn/
 GuideService/target/
 PaymentService/.mvn/
 PaymentService/target/
+AdminService/.mvn/
+AdminService/target/
+
 
 
 
