Added an upload server to handle uploads.

--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,9 @@ PaymentService/.mvn/
 PaymentService/target/
 AdminService/.mvn/
 AdminService/target/
+UploadService/.mvn/
+UploadService/target/
+
 
 
 
