Re-Added an upload server to handle uploads.

--- a/.gitignore
+++ b/.gitignore
@@ -54,8 +54,8 @@ PaymentService/.mvn/
 PaymentService/target/
 AdminService/.mvn/
 AdminService/target/
-UploadService/.mvn/
-UploadService/target/
+UploadServer/.mvn/
+UploadServer/target/
 
 
 
