--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,8 @@ AdminService/.mvn/
 AdminService/target/
 UploadServer/.mvn/
 UploadServer/target/
+PackageDetailsService/.mvn/
+PackageDetailsService/target/
 
 
 
