--- a/PackageDetailsService/src/main/resources/application.properties
+++ b/PackageDetailsService/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-
+spring.application.name=packagedetails-service
+spring.datasource.url=jdbc:mysql://localhost:3306/NextTravel-VehiclesDB?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.main.allow-circular-references=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+server.port=8087
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
