--- a/UploadServer/src/main/resources/application.properties
+++ b/UploadServer/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=upload-service
 server.port=8090
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
