--- a/EmaillService/src/main/resources/application.properties
+++ b/EmaillService/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.jpa.show-sql=true
 spring.main.allow-circular-references=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.port=8093
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=drpeiris3.edu@gmail.com
+spring.mail.password=xqgeuvzfacfkpqtl 
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
