--- a/EmaillService/pom.xml
+++ b/EmaillService/pom.xml
@@ -55,6 +55,12 @@
             <version>0.11.5</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.uuid</groupId>
+            <artifactId>java-uuid-generator</artifactId>
+            <version>4.3.0</version>
+        </dependency>
+
 
 
         <dependency>
