--- a/UploadServer/src/main/resources/application.properties
+++ b/UploadServer/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=upload-service
 server.port=8090
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 
