--- a/PackageDetailsService/pom.xml
+++ b/PackageDetailsService/pom.xml
@@ -64,6 +64,13 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.uuid/java-uuid-generator -->
+        <dependency>
+            <groupId>com.fasterxml.uuid</groupId>
+            <artifactId>java-uuid-generator</artifactId>
+            <version>4.1.1</version>
+        </dependency>
+
 
         <dependency>
             <groupId>com.mysql</groupId>
