Added functionality to upload files to GDrive.

--- a/UploadServer/src/main/resources/application.properties
+++ b/UploadServer/src/main/resources/application.properties
@@ -3,5 +3,7 @@ server.port=8090
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+google.credentials.path=/src/main/resources/credentials.json
+
 
 
