Fixed an issue regarding GDrive auth token expiration.

--- a/UploadServer/src/main/resources/application.properties
+++ b/UploadServer/src/main/resources/application.properties
@@ -3,7 +3,10 @@ server.port=8090
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-google.credentials.path=/src/main/resources/credentials.json
+client_id=300275810424-cqnu2be1v64g2qa6ok5pjgc1l0rnv52t.apps.googleusercontent.com
+client_secret=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
+grant_type=refresh_token
+refresh_token=1//0gUUmUL-A3QiUCgYIARAAGBASNwF-L9IrupaPTpGRlWR6h2OxtoCuwg-xOt2YxHuBIL3fdYfaz-qzbaIuBDSz55bN39AX2pfwssM
 
 
 
