--- a/StripeService/pom.xml
+++ b/StripeService/pom.xml
@@ -24,6 +24,10 @@
             <artifactId>stripe-java</artifactId>
             <version>24.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
